@@ -40,11 +40,14 @@ public class PolygonFilter extends AreaFilter {
 	 * @param completeRelations
 	 *            Include all relations referenced by other relations which have members inside
 	 *            the filtered area.
+     * @param cascadingRelations
+     *            Include all relations that reference other relations which have members inside the
+     *            filtered area. This is less costly than completeRelations.
 	 */
 	public PolygonFilter(
 			IdTrackerType idTrackerType, File polygonFile, boolean clipIncompleteEntities, boolean completeWays,
-			boolean completeRelations) {
-	    super(idTrackerType, clipIncompleteEntities, completeWays, completeRelations);
+			boolean completeRelations, boolean cascadingRelations) {
+	    super(idTrackerType, clipIncompleteEntities, completeWays, completeRelations, cascadingRelations);
 		this.polygonFile = polygonFile;
 		
 		area = null;
